sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:9: error: not found: value lgr
for (i<-0 to lgr-2) {
             ^AlgBubbleSort1:10: error: not found: value change
change=true;
^AlgBubbleSort1:11: error: not found: value lgr
  for(j<-0 to lgr-2) {
              ^AlgBubbleSort1:14: error: not found: value change
      change=false;
      ^